Connect Back and frontend.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,47 @@
 spring.application.name=bbbrewery-backend
 
+# Configuration Oracle (serveur distant)
 spring.datasource.url=jdbc:oracle:thin:@199.212.26.208:1521/SQLD
 spring.datasource.username=COMP214_W25_ers_50
 spring.datasource.password=password
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+# Configuration HikariCP pour serveur distant Oracle
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.maximum-pool-size=6
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.pool-name=HikariPool-Oracle
+
+# Tests de connexion essentiels pour serveur distant
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+spring.datasource.hikari.test-while-idle=true
+spring.datasource.hikari.test-on-borrow=true
+
+# Proprietes Oracle pour connexions reseau stables
+spring.datasource.hikari.data-source-properties.oracle.jdbc.ReadTimeout=60000
+spring.datasource.hikari.data-source-properties.oracle.net.CONNECT_TIMEOUT=15000
+spring.datasource.hikari.data-source-properties.oracle.jdbc.autoCommitSpecCompliant=false
+spring.datasource.hikari.data-source-properties.oracle.net.disableOob=true
+
+# Configuration JPA/Hibernate - MODE SECURISE
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
+# Optimisations pour serveur distant
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+# Gestion des timeouts pour connexion reseau
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.jpa.properties.hibernate.connection.autocommit=false
+
+# Reduction des logs de warning
+logging.level.com.zaxxer.hikari.pool.PoolBase=ERROR
+logging.level.org.hibernate.orm.deprecation=ERROR
+logging.level.org.hibernate.dialect.Dialect=ERROR
